--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-configobj==5.0.6
+astroid==2.2.5
 Django==1.11.24
 djangorestframework==3.9.4
-nemo-emblems==3.8.0
-pycairo==1.16.2
-pycrypto==2.6.1
-pygobject==3.26.1
-pyparted==3.11.1
-python-apt==1.6.0
-python-xlib==0.20
+isort==4.3.21
+lazy-object-proxy==1.4.2
+mccabe==0.6.1
+pep8==1.7.1
+pkg-resources==0.0.0
+pylint==2.3.1
 pytz==2019.2
-pyxdg==0.25
-setproctitle==1.1.10
-six==1.11.0
-virtualenv==16.7.5
+six==1.12.0
+typed-ast==1.4.0
+wrapt==1.11.2
