--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-venv/
+env/
 build/
 develop-eggs/
 dist/
@@ -38,6 +38,7 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
+.pytest_cache
 
 # Translations
 *.mo
