--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
 astroid==2.2.5
+atomicwrites==1.3.0
+attrs==19.1.0
+coverage==4.5.4
 Django==1.11.24
 djangorestframework==3.9.4
+importlib-metadata==0.22
 isort==4.3.21
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
+more-itertools==7.2.0
+packaging==19.1
 pep8==1.7.1
 pkg-resources==0.0.0
+pluggy==0.13.0
+psycopg2==2.7.1
+psycopg2-binary==2.8.3
+py==1.8.0
 pylint==2.3.1
+pyparsing==2.4.2
+pytest==5.1.2
+pytest-cov==2.7.1
 pytz==2019.2
 six==1.12.0
 typed-ast==1.4.0
+wcwidth==0.1.7
 wrapt==1.11.2
+zipp==0.6.0
