--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
+autopep8==1.4.4
 certifi==2019.9.11
 chardet==3.0.4
 coverage==4.5.4
@@ -15,11 +16,13 @@ mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
 pep8==1.7.1
+Pillow==6.1.0
 pkg-resources==0.0.0
 pluggy==0.13.0
 psycopg2==2.7.1
 psycopg2-binary==2.8.3
 py==1.8.0
+pycodestyle==2.5.0
 Pygments==2.4.2
 pylint==2.3.1
 pyparsing==2.4.2
