--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ more-itertools==7.2.0
 packaging==19.2
 pep8==1.7.1
 Pillow==6.1.0
-pkg-resources==0.0.0
+pkg-resources
 pluggy==0.13.0
 psycopg2==2.7.1
 psycopg2-binary==2.8.3
