--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install:
   - python3 -m venv env
   - source env/bin/activate
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
   - python manage.py migrate
 # command to run tests
 script:
