--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ autopep8==1.4.4
 certifi==2019.9.11
 chardet==3.0.4
 coverage==4.5.4
-Django==2.2.5
+Django
 djangorestframework==3.9.4
 httpie==1.0.3
 idna==2.8
