--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ importlib-metadata==0.23
 isort==4.3.21
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
-more-itertools==7.2.0
+more-itertools
 packaging==19.2
 pep8==1.7.1
 Pillow==6.1.0
