--- a/requirements.txt
+++ b/requirements.txt
@@ -24,15 +24,15 @@ py==1.8.0
 pycodestyle==2.5.0
 Pygments==2.4.2
 pyparsing==2.4.2
-pytest==5.1.2
-pytest-cov==2.7.1
-pytest-django==3.5.1
+pytest
+pytest-cov
+pytest-django
 pytz==2019.2
 requests==2.22.0
 six==1.12.0
 sqlparse==0.3.0
-typed-ast==1.4.0
+typed-ast
 urllib3==1.25.5
 wcwidth==0.1.7
-wrapt==1.11.2
-zipp==0.6.0
+wrapt
+zipp
