--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "3.6"
 # command to install dependencies
 install:
+  - cd yuthancebackend
   - pip install -r requirements.txt
   - python manage.py migrate
 # command to run tests
