--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - cd yuthancebackend
+  - python3 -m venv env
+  - source env/bin/activate
   - pip install -r requirements.txt
   - python manage.py migrate
 # command to run tests
