--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 language: python
 python:
   - "3.6"
+services:
+  - postgresql
 # command to install dependencies
 install:
   - pip install -r requirements.txt
 # command to run tests
 script:
   - pytest
+before_script:
+  - psql -c 'create database test_yuthance;' -U postgres
+  - python manage.py migrate
 # run coveralls after successful tests
 after_success:
 - pytest --cov=api
