--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_script:
   - psql -c "CREATE ROLE yuthance SUPERUSER LOGIN CREATEDB;" -U postgres
 # run coveralls after successful tests
 after_success:
-- pytest --cov=api
+- coveralls
