--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest
+  - pytest --cov=api
 before_script:
   - psql -c 'create database test_yuthance;' -U postgres
   - psql -c "CREATE ROLE yuthance SUPERUSER LOGIN CREATEDB;" -U postgres
