--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
+autoenv==1.0.0
 autopep8==1.4.4
 certifi==2019.9.11
 chardet==3.0.4
 coverage==4.5.4
+coveralls==1.8.2
 Django==2.2.5
 djangorestframework==3.9.4
+docopt==0.6.2
 httpie==1.0.3
 idna==2.8
 importlib-metadata==0.23
