--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ chardet==3.0.4
 coverage==4.5.4
 coveralls==1.8.2
 Django==2.2.5
+django-rest-auth==0.9.5
 djangorestframework==3.9.4
+djangorestframework-jwt==1.11.0
 docopt==0.6.2
 httpie==1.0.3
 idna==2.8
@@ -28,6 +30,7 @@ psycopg2-binary==2.8.3
 py==1.8.0
 pycodestyle==2.5.0
 Pygments==2.4.2
+PyJWT==1.7.1
 pylint==2.3.1
 pyparsing==2.4.2
 pytest==5.1.2
